tests/agl/rejections/type/opacity_print_fn.agl
render(1, pretty = "yes")
